--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "web application for managing a simulated network of surveillance cameras in a building or facility.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/nodemon -L express_server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +13,9 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
     "three": "^0.151.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
